[project]
name = "loanwise-openenv"
version = "0.1.0"
description = "Loan Approval OpenEnv"
authors = [{ name = "Ekta" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:app"